Update announcement/announcement-impl/impl/src/java/org/sakaiproject/announcement/impl/BaseAnnouncementService.java
Co-authored-by: Adrian Fish <adrian.r.fish@gmail.com>